[package]
name = dummy_package
version=0.1.0
edition = 2021

[lib]
path = dummy.rs

[dependencies]
unicode-segmentation = 1.8.0    # This crate provides Grapheme Cluster, Word and Sentence boundaries according to Unicode Stand…
chrono = 0.4.19                   # Date and time library for Rust
itertools = 0.10.3         # Extra iterator adaptors, iterator methods, free functions, and macros.
rand = 0.8.4              # Random number generators and other randomness functionality. 
regex = 1.5.4               # An implementation of regular expressions for Rust. This implementation uses finite automata and g…
lazy_static = 1.4.0            # A macro for declaring lazily evaluated statics in Rust.
rayon = 1.5.1                 # Simple work-stealing parallelism for Rust
time = 0.3.5                # Date and time library. Fully interoperable with the standard library. Mostly compatible with #![n…
num = 0.4.0                       # A collection of numeric types and traits for Rust, including bigint, complex, rational, ran…
unicode-reverse = 1.0.8    # Unicode-aware in-place string reversal
maplit = 1.0.2                 # Collection “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet.
crossbeam = 0.8.1              # Tools for concurrent programming
num-traits = 0.2.14              # Numeric traits for generic mathematics
primes = 0.3.0                    # A package for calculating primes using the Sieve of Eratosthenes, and using that to check i…
num-bigint = 0.4.3          # Big integer implementation for Rust
modulo = 0.1.2                                        # Simple modulo operation.
criterion = 0.3.5                   # Statistics-driven micro-benchmarking library
num-integer = 0.1.44           # Integer traits and functions
crossbeam-utils = 0.8.5    # Utilities for concurrent programming
bit-vec = 0.6.3                           # A vector of bits
strum = 0.23.0               # Helpful macros for working with enums and strings
strum_macros = 0.23.1        # Helpful macros for working with enums and strings
primal = 0.3.0              #  puts raw power into prime numbers. This crates includes: optimised prime sieves, checkin…
once_cell = 1.8.0              # Single assignment cells and lazy values.
failure = 0.1.8                # Experimental error handling abstraction.
counter = 0.5.2            # Simple package to count generic iterables
permutator = 0.4.0                  # Get a lexicographic cartesian product and lexicographic permutation at any specific index…
rstest = 0.11.0                  # Rust fixture based test framework. It use procedural macro to implement fixtures and table b…
crossbeam-channel = 0.5.1               # Multi-producer multi-consumer channels for message passing
bitflags = 1.3.2                         # A macro to generate structures which behave like bitflags. 
permutohedron = 0.2.4     # Generate permutations of sequences. Either lexicographical order permutations, or a minimal swaps p…
num-derive = 0.3.3            # Numeric syntax extensions
ndarray = 0.15.4           # An n-dimensional array for general elements and for numerics. Lightweight array views and slicing;…
anyhow = 1.0.51                 # Flexible concrete Error type built on std::error::Error
nom = 7.1.0                 # A byte-oriented, zero-copy, parser combinators library
threadpool = 1.8.1                      # A thread pool for running a number of jobs on a fixed set of worker threads. 
cached = 0.26.2              # Generic cache implementations and simplified function memoization
unicase = 2.6.0                     # A case-insensitive wrapper around strings.
phf = 0.10.0              # Runtime support for perfect hash function data structures
libmath = 0.2.1    # Mathematical utilities
unicode-normalization = 0.1.19               # This crate provides functions for normalization of Unicode strings, including Ca…
rstest_reuse = 0.1.3    # Reuse rstest attributes: create a set of tests and apply it  to every scenario you want to test. 
petgraph = 0.6.0                      # Graph data structure library. Provides graph types and graph algorithms.
im = 15.0.0                  # Immutable collection datatypes
hexlit = 0.5.3       # A zero-allocation no_std-compatible zero-cost way to convert hex-strings to byte-arrays at compile time.
enum-iterator = 0.7.0           # Tools to iterate over the variants of a field-less enum
boolinator = 2.4.0    # Provides the Boolinator trait, which lets you use Option and Result-style combinators with bools.
uuid = 1.0.0-alpha.1        # A library to generate and parse UUIDs.
num_enum = 0.5.4                       # Procedural macros to make inter-operation between primitives and enums easier.
duplicate = 0.3.0            # The attribute macro  can duplicate an item with variable substitution.
divrem = 1.0.0    # Division and modulus variants
pest = 2.1.3                   # The Elegant Parser
modinverse = 0.1.1    # Small library for finding the modular multiplicative inverses.
dashmap = 4.0.2                  # Blazing fast concurrent HashMap for Rust.
bit-set = 0.5.2      # A set of bits
bimap = 0.6.1             # Bijective maps
voca_rs = 1.14.0    # Voca_rs is a Rust library for manipulating [unicode] strings
unic-segment = 0.9.0    # UNIC — Unicode Text Segmentation Algorithms
thiserror = 1.0.30          # derive(Error)
multiset = 0.0.5                # Multisets/bags
kmp = 0.1.1          # Various functions using the Knuth–Morris–Pratt algorithm to efficiently find patterns.
gcd = 2.0.2                 # Small Rust library (with no dependencies) for calculating greatest common divisor
fnv = 1.0.7              # Fowler–Noll–Vo hash function
derivative = 2.2.0              # A set of alternative  attributes for Rust
ascii = 1.0.0                    # ASCII-only equivalents to ,  and .
unicode_reader = 1.0.2         # Adaptors which wrap byte-oriented readers and yield the UTF-8 data as Unicode code points or g…
unic-char-range = 0.9.0    # UNIC — Unicode Character Tools — Character Range and Iteration
structopt = 0.3.25               # Parse command line argument by defining a struct.
scan_fmt = 0.2.6          # A simple scanf()-like input for Rust
pretty_assertions = 1.0.0       # Overwrite  and  with drop-in replacements, adding colorful diffs.
pest_derive = 2.1.0                # pest's derive macro
multimap = 0.8.3                 # A multimap implementation.
try_opt = 0.2.0         # [deprecated] Like try!, but for Option
integer-sqrt = 0.1.5    # An implementation of integer square root algorithm for primitive rust types
int-enum = 0.4.0         # A procedural macro for conversion between integer and enum types.
indexmap = 1.7.0                 # A hash table with consistent order and fast iteration.  The indexmap is a hash table where t…
hashers = 1.0.1                     # A collection of non-cryptographic hashing algorithms for Rust
grapheme = 0.0.0                # grapheme
factorial = 0.2.1                   # Convenient methods to compute the factorial, optionally checked.
eval = 0.4.3               # Expression evaluator
derive_more = 0.99.17           # Adds #[derive(x)] macros for more traits
counted-array = 0.1.2    # Macro for declaring fixed-size arrays without counting elements by hand. Supports lazy_static.
case = 1.0.0                # A set of letter case string helpers
bitvec = 1.0.0-rc1             # Addresses memory by bits, for packed collections and bitfields
arrayvec = 0.7.2            # A vector with fixed capacity, backed by an array (it can be stored on the stack too). Implements …
Inflector = 0.11.4                  # Adds String based inflections for Rust. Snake, kebab, camel, sentence, class, title and t…
watch = 0.2.0                  # A synchronous message passing channel that only retains the most recent value. 
stringsort = 2.0.0      # Pathological sorting of string characters
serde = 1.0.130                         # A generic serialization/deserialization framework
rusqlite = 0.26.1                   # Ergonomic wrapper for SQLite
reikna = 0.12.3    # A work in progress math library
modexp = 0.2.2                                  # A modular exponentiation crate for BigInts
mod_exp = 1.0.1             # Crate for doing modular exponentiation efficiently 
lazysort = 0.2.1    # Lazy sorting for iterators
evalexpr = 6.6.0         # A powerful arithmetic and boolean expression evaluator
enumflags2 = 0.7.1            # Enum-based bit flags
enum_derive = 0.1.7               # This crate provides macros for deriving additional functionality for enums.
custom_derive = 0.1.7            # (Note: superseded by ) This crate provides a macro that enables the use of custo…
char_stream = 0.1.8           # Unified character reading interface to str, String, bytes, File and Stdin for Rust language.
bytecount = 0.6.2     # count occurrences of a given byte, or the number of UTF-8 code points, in a byte slice, fast
bencher = 0.1.5                     # A port of the libtest (unstable Rust) benchmark runner to Rust stable releases. Supports …
unzip-n = 0.1.2    # Procedural macro to generate UnZip 6.00 of 20 April 2009, by Debian. Original by Info-ZIP.

Usage: unzip [-Z] [-opts[modifiers]] file[.zip] [list] [-x xlist] [-d exdir]
  Default action is to extract files in list, except those in xlist, to exdir;
  file[.zip] may be a wildcard.  -Z => ZipInfo mode ("unzip -Z" for usage).

  -p  extract files to pipe, no messages     -l  list files (short format)
  -f  freshen existing files, create none    -t  test compressed archive data
  -u  update files, create if necessary      -z  display archive comment only
  -v  list verbosely/show version info       -T  timestamp archive to latest
  -x  exclude files that follow (in xlist)   -d  extract files into exdir
modifiers:
  -n  never overwrite existing files         -q  quiet mode (-qq => quieter)
  -o  overwrite files WITHOUT prompting      -a  auto-convert any text files
  -j  junk paths (do not make directories)   -aa treat ALL files as text
  -U  use escapes for all non-ASCII Unicode  -UU ignore any Unicode fields
  -C  match filenames case-insensitively     -L  make (some) names lowercase
  -X  restore UID/GID info                   -V  retain VMS version numbers
  -K  keep setuid/setgid/tacky permissions   -M  pipe through "more" pager
See "unzip -hh" or unzip.txt for more help.  Examples:
  unzip data1 -x joe   => extract all files except joe from zipfile data1.zip
  unzip -p foo | more  => send contents of foo.zip via pipe into program more
  unzip -fo foo ReadMe => quietly replace existing ReadMe if archive file newer for iterators over n-sized tuples
unic-normal = 0.9.0     # UNIC — Unicode Normalization Forms
transpose = 0.2.1          # Utility for transposing multi-dimensional data
test-case = 1.2.1                           # Provides #[test_case(...)] procedural macro attribute for generating parametrized…
subslice = 0.2.3            # Fast subslice search
strfmt = 0.1.6         # strfmt: rust library for formatting dynamic strings
slow_primes = 0.1.14       # Deprecated in favour of .  A library to generate, identify and handle prime numbers and re…
serde_derive = 1.0.130                  # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
say-number = 1.0.0    # Library to say numbers in English, Chinese (simplified), French, Japanese and Vietnamese
rustversion = 1.0.6           # Conditional compilation according to rustc compiler version
rs_poker = 2.0.0-alpha.1    # A library to help with any Rust code dealing with poker. This includes card values, suits, hands,…
recur-fn = 2.2.0    # A library that provides you a more flexible way to construct and extend the recursive function.
readonly = 0.2.0          # Struct fields that are made read-only accessible to other modules
rand_chacha = 0.3.1         # ChaCha random number generator 
ramp = 0.6.0                # A high-performance multiple-precision arithmetic library
quickcheck_macros = 1.0.0              # A macro attribute for quickcheck.
quickcheck = 1.0.3                     # Automatic property based testing with shrinking.
proptest = 1.0.0                              # Hypothesis-like property-based testing and shrinking. 
prime_tools = 0.3.4               # Generate primes, get prime factors, check primality, and other useful prime-related utiliti…
peg = 0.7.0              # A simple Parsing Expression Grammar (PEG) parser generator.
pcre = 0.2.3                     # Rust wrapper for libpcre. 
ordered-float = 2.8.0        # Wrappers for total ordering on floats
onig = 6.3.1                # Rust-Onig is a set of Rust bindings for the Oniguruma regular expression library. Oniguruma is a …
num_cpus = 1.13.0               # Get the number of CPUs on a machine.
luhn = 1.0.1             # A Luhn validation library
linked_hash_set = 0.1.4           # HashSet with insertion ordering
linked-hash-map = 0.5.4             # A HashMap wrapper that holds key-value pairs in insertion order
libm = 0.2.1            # libm in pure Rust
inflections = 1.1.1       # High performance inflection transformation library for changing properties of words like the case.
indicatif = 0.17.0-beta.1    # A progress bar and cli reporting library for Rust
imageproc = 0.22.0           # Image processing operations
image = 0.23.14                     # Imaging library written in Rust. Provides basic filters and decoders for the most common …
if_chain = 1.0.2             # Macro for writing nested  expressions.
hashbag = 0.1.4    # An unordered multiset implementation using a hash bag
generational-arena = 0.2.8                # A safe arena allocator that supports deletion without suffering from the ABA proble…
frunk = 0.4.0                       # Frunk provides developers with a number of functional programming tools like HList, Copro…
factor = 0.4.0                   # Find the factors for any integer.
enum-primitive-derive = 0.2.2          # enum_primitive implementation using procedural macros to have a custom derive
either = 1.6.1                  # The enum  with variants  and  is a general purpose sum type with two cas…
digits_iterator = 0.1.0     # Iterate over the digits of numbers in an arbitrary radix
csv = 1.1.6             # Fast CSV parsing with support for serde.
conv = 0.3.3                              # This crate provides a number of conversion traits with more specific semantics than…
compare = 0.1.0              # Experimental comparators for collections to be generic over
char-iter = 0.1.0    # A performant iterator over a linear range of characters (s), correctly handling the surrogate rang…
caseless = 0.2.1                     # Unicode caseless matching
binomial-iter = 0.1.0    # Provides tools to iteratively compute the binomial coefficient
bigint = 4.4.3                     # DEPRECATED: use uint instead
bigdecimal = 0.3.0          # Arbitrary precision decimal numbers
async-std = 1.10.0               # Async version of the Rust standard library
async-channel = 1.6.1          # Async multi-producer multi-consumer channel
assert_float_eq = 1.1.3           # Assertions for floating-point equality.
array_tool = 1.0.3          # Helper methods for processing collections
z3 = 0.11.2           # High-level rust bindings for the Z3 SMT solver from Microsoft Research
xvii = 0.4.1    # Library for parsing or printing Roman numerals 
workerpool = 1.2.0           # A thread pool for running a number of jobs on a fixed set of stateful worker threads. 
unidecode = 0.3.0    # Provides pure ASCII transliterations of Unicode strings.
unicode-case-mapping = 0.2.0    # Fast lowercase, uppercase, and titlecase mapping for characters
unic-langid = 0.9.0                # API for managing Unicode Language Identifiers
tramp = 0.3.0         # Trampoline for recursive functions, with support for mutual recursion
tinyset = 0.4.6    # Size-optimized sets
stringreader = 0.1.1    # Provides a wrapper for strings so that they can be consumed via the std::io::Read trait.
static_assertions = 1.1.0         # Compile-time assertions to ensure that invariants are met.
spinning_top = 0.2.4      # A simple spinlock crate based on the abstractions provided by .
sparse-bitfield = 0.11.0    # Bitfield that allocates a series of small buffers
sliding_windows = 3.0.0               # a non-copying implementation of a sliding windows iterator adaptor
simplelog = 0.11.0          # A simple and easy-to-use logging facility for Rust's log crate
simple_parallel = 0.3.0        # Straight-forward functions and types for basic data parallel operations, including parallel ma…
serial_test = 0.5.1             # Allows for the creation of serialised Rust tests
scoped_threadpool = 0.1.9               # A library for scoped and cached threadpools.
scoped-pool = 1.0.0    # A flexible thread pool providing scoped threads.
rustc-hash = 1.1.0        # speed, non-cryptographic hash used in rustc
rug = 1.14.0               # Arbitrary-precision integers, rational, floating-point and complex numbers based on GMP, MPFR and …
reduce = 0.1.4                     # Fold an iterator without an initial value
queues = 1.1.0                # Efficient FIFO Queue data structures
pprof = 0.6.1                           # An internal perf tools for rust programs.
phf_macros = 0.10.0               # Macros to generate types in the phf crate
pathfinding = 2.2.2                    # Pathfinding, flow, and graph algorithms
out = 6.1.0                                          # Provides fast min and max functionality for collections.
numtoa = 0.2.4    # Convert numbers into stack-allocated byte arrays
num-format = 0.4.0            # A Rust crate for producing string-representations of numbers, formatted according to internatio…
num-digitize = 0.4.2    # Converts integer of type N into Vec<i8> containing its digits.
mustache = 0.9.0            # Rust implementation of Mustache
memoize = 0.1.9          # Attribute macro for auto-memoizing functions with somewhat-simple signatures
macro-attr = 0.2.0             # This crate provides the  macro that enables the use of custom, macro-based attrib…
log = 0.4.14             # A lightweight logging facade for Rust 
lexical-sort = 0.3.1    # Sort Unicode strings lexically
left-pad = 1.0.1        # Provides left-padding for strings.
lalrpop-util = 0.19.6       # Runtime library for parsers generated by LALRPOP
itoa = 0.4.8                    # Fast functions for printing integer primitives to an io::Write
indoc = 1.0.3               # Indented document literals
incremental-topo = 0.1.2    # Data structure to maintain an incremental topological ordering over a collection of values
humantime = 2.1.0          #     A parser and formatter for std::time::{Duration, SystemTime} 
hashbrown = 0.11.2               # A Rust port of Google's SwissTable hash map
genawaiter = 0.99.1               # Stackless generators on stable Rust.
futures-core = 0.3.18                    # The core traits and types in for the  library. 
free-ranges = 1.0.7    # An efficient data structure for keeping track of indices which are either free or not 
foreach = 0.3.0         # ForEach trait and for_each! macro allow you to use iterator inside iteration loop, which is not posib…
fluent = 0.16.0               # A localization system designed to unleash the entire expressive power of natural language trans…
flamer = 0.4.0           # a procedural macro to insert  calls
flame = 0.2.2             # a profiling / flamegraph library
flagset = 0.4.2       # Data types and a macro for generating enumeration-based bit flags
fixedbitset = 0.4.0                # FixedBitSet is a simple bitset collection
fasteval = 0.2.4         # Fast evaluation of algebraic expressions
fancy-regex = 0.7.1            # An implementation of regexes, supporting a relatively rich set of features, including backrefe…
failure_derive = 0.1.8                      # derives for the failure crate
enumset = 1.0.8                  # A library for creating compact sets of enums.
enum-utils = 0.1.2             # A set of useful proc macros for enums
encode_unicode = 0.3.6       # UTF-8 and UTF-16 character types, iterators and related methods for char, u8 and u16. 
easybench = 1.1.0         # A lightweight benchmarking library
divisors = 0.2.1               # A blazing fast library to find all divisors of a natural number.
dia-time = 6.1.0    # Small kit for time
deunicode = 1.3.1    # Convert Unicode strings to pure ASCII by intelligently transliterating them. Suppors Emoji and Chinese.
defaultmap = 0.5.0    # Provides a HashMap with an automatic default for missing keys.
cranelift-simplejit = 0.68.0                 # A simple JIT library backed by Cranelift
cranelift-module = 0.78.0                 # Support for linking functions and data with Cranelift
cranelift = 0.78.0                                # Umbrella for commonly-used cranelift crates
cow-utils = 0.1.2    # Copy-on-write string utilities for Rust
convert_case = 0.4.0              # Convert strings into any case
const_fn_assert = 0.1.2        # Assertions for const functions.
clap = 3.0.0-beta.5                    # A simple to use, efficient, and full-featured Command Line Argument Parser 
chomp = 0.3.1               # A fast monadic-style parser combinator designed to work on stable Rust.
chashmap = 2.2.2            # Fast, concurrent hash maps with extensive API.
change-case = 0.2.0    # Transform a string between camelCase, PascalCase, Capital Case, snake_case, param-case, CONSTANT_CASE …
cast = 0.3.0                        # Ergonomic, checked cast functions for primitive types
case_insensitive_hashmap = 1.0.0    # A HashMap that uses case-insensitive strings as keys.
bstr = 0.2.17           # A string type that is not required to be valid UTF-8.
binary-heap-plus = 0.4.1     # Enhanced version of std::collections::BinaryHeap that supports max, min, and custom-order heaps.
as-slice = 0.2.1         #  and  traits
arr_macro = 0.1.3          # Initialize arrays with ease!
alloc_counter = 0.0.4          # Count allocations, reallocations, deallocations. Allow, deny, or forbid allocations on an expr…
